# mathpreter

./: .flake8  .pre-commit-config.yaml  README.md  license  pyproject.toml
mathpreter/: ast.py  errors.py  lexer.py  parser.py  token.py  utils.py
tests/: test_lexer.py  test_parser.py  test_token.py
